--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="bg-[var(--background)] text-[var(--foreground)] min-h-screen p-4">
   <div class="flex justify-between items-center mb-4">
     <div class="flex items-center space-x-2">
-      <img src="https://placehold.co/50x50" alt="FR Topup Logo" class="w-12 h-12 rounded-full border-2 border-[var(--primary)]">
+      <img src="asset/ico.png" alt="FR Topup Logo" class="w-12 h-12 rounded-full border-2 border-[var(--primary)]">
       <div>
         <h1 class="text-2xl font-extrabold text-[var(--primary)]">FR TOPUP</h1>
         <p class="text-sm text-[var(--muted-foreground)]">পাইকারি দামে ডায়মন্ড টপ আপ</p>
@@ -118,8 +118,8 @@
   </div>
   <div class="grid grid-cols-2 gap-4 mb-4">
     <div class="text-center">
-      <img src="https://placehold.co/100x100" alt="Free Fire 2id Topup" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
-      <p class="font-bold text-[var(--primary-foreground)]">Free Fire 2id Topup</p>
+      <img src="asset/freefire.jpeg" alt="Free Fire 2id Topup" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+      <p class="font-bold text-[var(--primary-foreground)]">Free Fire uid Topup</p>
       <p class="text-sm text-[var(--muted-foreground)]">(BD SERVER)</p>
     </div>
     <div class="text-center">
