--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
     <div class="flex items-center space-x-2">
       <img src="asset/ico.png" alt="FR Topup Logo" class="w-12 h-12 rounded-full border-2 border-[var(--primary)]">
       <div>
-        <h1 class="text-2xl font-extrabold text-[var(--primary)]">FR TOPUP</h1>
+        <h1 class="text-2xl font-extrabold text-[var(--primary)]">MSI TopUP</h1>
         <p class="text-sm text-[var(--muted-foreground)]">পাইকারি দামে ডায়মন্ড টপ আপ</p>
       </div>
     </div>
     <button class="bg-gradient-to-r from-pink-500 to-orange-500 text-white px-4 py-2 rounded-full shadow-lg hover:scale-105 transition-transform">LOGIN</button>
   </div>
   <div class="relative mb-4">
-    <img src="https://placehold.co/600x200" alt="FR Topup Banner" class="w-full rounded-lg shadow-lg">
+    <img src="https://placehold.co/600x200" alt="MSI Topup Banner" class="w-full rounded-lg shadow-lg">
     <button class="absolute top-1/2 left-2 transform -translate-y-1/2 bg-white p-2 rounded-full shadow-md hover:bg-[var(--accent)] transition-colors">❮</button>
     <button class="absolute top-1/2 right-2 transform -translate-y-1/2 bg-white p-2 rounded-full shadow-md hover:bg-[var(--accent)] transition-colors">❯</button>
   </div>
@@ -123,33 +123,33 @@
       <p class="text-sm text-[var(--muted-foreground)]">(BD SERVER)</p>
     </div>
     <div class="text-center">
-      <img src="https://placehold.co/100x100" alt="UNIPIN VOUCHER" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+      <img src="asset/unipin.png" alt="UNIPIN VOUCHER" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">UNIPIN VOUCHER</p>
       <p class="text-sm text-[var(--muted-foreground)]">(BDT)</p>
     </div>
     <div class="text-center">
-      <img src="https://placehold.co/100x100" alt="Free Fire [Airdrop]" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+      <img src="asset/airdrop.png" alt="Free Fire [Airdrop]" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">Free Fire [Airdrop]</p>
       <p class="text-sm text-[var(--muted-foreground)]">(UID CODE)</p>
     </div>
     <div class="text-center">
-      <img src="https://placehold.co/100x100" alt="WEEKLY LITE" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+      <img src="asset/weekly lite.png" alt="WEEKLY LITE" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">WEEKLY LITE</p>
       <p class="text-sm text-[var(--muted-foreground)]">(21ID)</p>
     </div>
     <div class="text-center">
-      <img src="https://placehold.co/100x100" alt="Evo Access" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+      <img src="asset/evo.png" alt="Evo Access" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">Evo Access</p>
       <p class="text-sm text-[var(--muted-foreground)]">(BD SERVER)</p>
     </div>
     <div class="text-center">
-      <img src="https://placehold.co/100x100" alt="Monthly Weekly" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+      <img src="asset/monthly.png" alt="Monthly Weekly" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">Monthly Weekly</p>
-      <p class="text-sm text-[var(--muted-foreground)]">(21ID)</p>
+      <p class="text-sm text-[var(--muted-foreground)]">(UID)</p>
     </div>
   </div>
   <div class="bg-[var(--accent)] p-4 rounded-lg text-center mb-4 shadow-lg">
-    <img src="https://placehold.co/50x50" alt="Google Play" class="w-12 h-12 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+    <img src="asset/play.png" alt="Google Play" class="w-12 h-12 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
     <p class="font-bold text-[var(--accent-foreground)]">Download our mobile app now</p>
     <a href="#" class="text-[var(--primary)] hover:underline">Download Now →</a>
   </div>
