--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <p class="text-sm text-[var(--muted-foreground)]">(21ID)</p>
     </div>
     <div class="text-center">
-      <img src="asset/evo.png" alt="Evo Access" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
+      <img src="asset/evo.jpg" alt="Evo Access" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">Evo Access</p>
       <p class="text-sm text-[var(--muted-foreground)]">(BD SERVER)</p>
     </div>
