--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <h2 class="text-3xl font-extrabold text-[var(--secondary)]">GAMES TOP UP</h2>
   </div>
   <div class="grid grid-cols-2 gap-4 mb-4">
-    <div class="text-center"> <a href="freefire.html">
+    <div class="text-center"> <a href="Freefire.html">
       <img src="asset/freefire.jpeg" alt="Free Fire 2id Topup" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">Free Fire uid Topup</p>
       <p class="text-sm text-[var(--muted-foreground)]">(BD SERVER)</p>
