--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="text-center"> <a href="Freefire.html">
       <img src="asset/freefire.jpeg" alt="Free Fire 2id Topup" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
       <p class="font-bold text-[var(--primary-foreground)]">Free Fire uid Topup</p>
-      <p class="text-sm text-[var(--muted-foreground)]">(BD SERVER)</p>
+      <p class="text-sm text-[var(--muted-foreground)]">(BD SERVER)</p> </a>
     </div>
     <div class="text-center">
       <img src="asset/unipin.png" alt="UNIPIN VOUCHER" class="w-24 h-24 mx-auto mb-2 rounded-full border-2 border-[var(--primary)]">
