--- a/index.html
+++ b/index.html
@@ -173,7 +173,185 @@
   </div>
 </div>
 
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
+		<script src="https://unpkg.com/unlazy@0.11.3/dist/unlazy.with-hashing.iife.js" defer init></script>
+		<script type="text/javascript">
+			window.tailwind.config = {
+				darkMode: ['class'],
+				theme: {
+					extend: {
+						colors: {
+							border: 'hsl(var(--border))',
+							input: 'hsl(var(--input))',
+							ring: 'hsl(var(--ring))',
+							background: 'hsl(var(--background))',
+							foreground: 'hsl(var(--foreground))',
+							primary: {
+								DEFAULT: 'hsl(var(--primary))',
+								foreground: 'hsl(var(--primary-foreground))'
+							},
+							secondary: {
+								DEFAULT: 'hsl(var(--secondary))',
+								foreground: 'hsl(var(--secondary-foreground))'
+							},
+							destructive: {
+								DEFAULT: 'hsl(var(--destructive))',
+								foreground: 'hsl(var(--destructive-foreground))'
+							},
+							muted: {
+								DEFAULT: 'hsl(var(--muted))',
+								foreground: 'hsl(var(--muted-foreground))'
+							},
+							accent: {
+								DEFAULT: 'hsl(var(--accent))',
+								foreground: 'hsl(var(--accent-foreground))'
+							},
+							popover: {
+								DEFAULT: 'hsl(var(--popover))',
+								foreground: 'hsl(var(--popover-foreground))'
+							},
+							card: {
+								DEFAULT: 'hsl(var(--card))',
+								foreground: 'hsl(var(--card-foreground))'
+							},
+						},
+					}
+				}
+			}
+		</script>
+		<style type="text/tailwindcss">
+			@layer base {
+				:root {
+					--background: 0 0% 100%;
+--foreground: 222.2 84% 4.9%;
+--card: 0 0% 100%;
+--card-foreground: 222.2 84% 4.9%;
+--popover: 0 0% 100%;
+--popover-foreground: 222.2 84% 4.9%;
+--primary: 222.2 47.4% 11.2%;
+--primary-foreground: 210 40% 98%;
+--secondary: 210 40% 96.1%;
+--secondary-foreground: 222.2 47.4% 11.2%;
+--muted: 210 40% 96.1%;
+--muted-foreground: 215.4 16.3% 46.9%;
+--accent: 210 40% 96.1%;
+--accent-foreground: 222.2 47.4% 11.2%;
+--destructive: 0 84.2% 60.2%;
+--destructive-foreground: 210 40% 98%;
+--border: 214.3 31.8% 91.4%;
+--input: 214.3 31.8% 91.4%;
+--ring: 222.2 84% 4.9%;
+--radius: 0.5rem;
+				}
+				.dark {
+					--background: 222.2 84% 4.9%;
+--foreground: 210 40% 98%;
+--card: 222.2 84% 4.9%;
+--card-foreground: 210 40% 98%;
+--popover: 222.2 84% 4.9%;
+--popover-foreground: 210 40% 98%;
+--primary: 210 40% 98%;
+--primary-foreground: 222.2 47.4% 11.2%;
+--secondary: 217.2 32.6% 17.5%;
+--secondary-foreground: 210 40% 98%;
+--muted: 217.2 32.6% 17.5%;
+--muted-foreground: 215 20.2% 65.1%;
+--accent: 217.2 32.6% 17.5%;
+--accent-foreground: 210 40% 98%;
+--destructive: 0 62.8% 30.6%;
+--destructive-foreground: 210 40% 98%;
+--border: 217.2 32.6% 17.5%;
+--input: 217.2 32.6% 17.5%;
+--ring: 212.7 26.8% 83.9;
+				}
+			}
+		</style>
+  </head>
+  <body>
+    <div class="bg-[color:var(--background)] text-[color:var(--foreground)] p-8">
+  <div class="text-center">
+    <h2 class="text-2xl font-bold mb-4">STAY CONNECTED</h2>
+    <p class="mb-4">
+      আমরা বাংলাদেশের একমাত্র অটোমেটিক টপ-আপ ওয়েবসাইট। আমাদের ওয়েবসাইট থেকে আপনারা আমার তো 5 মিনিটে টপ আপ করতে পারবেন।
+    </p>
+    <p class="mb-2">Phone: 01629744516</p>
+    <p class="mb-8">mail.frtopup@gmail.com</p>
+  </div>
+  <div class="text-center">
+    <h3 class="text-xl font-bold mb-4">SUPPORT</h3>
+    <div class="mb-4">
+      <div class="flex items-center justify-center space-x-4 p-4 border border-[color:var(--border)] rounded-lg">
+        <img aria-hidden="true" alt="phone-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📞" />
+        <div>
+          <p>9AM - 12PM</p>
+          <p>01628134404</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="flex items-center justify-center space-x-4 p-4 border border-[color:var(--border)] rounded-lg">
+        <img aria-hidden="true" alt="whatsapp-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📱" />
+        <div>
+          <p>9AM - 12PM</p>
+          <p>01628134404</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center mt-8">
+    <p class="text-sm">© Copyright 2022. All Rights Reserved. Developed by <span class="font-bold">frtopup</span></p>
+  </div>
+</div>
+<div class="bg-[color:var(--background)] text-[color:var(--foreground)] p-8">
+  <div class="text-center">
+    <h2 class="text-2xl font-bold mb-4">STAY CONNECTED</h2>
+    <p class="mb-4">
+      আমরা বাংলাদেশের একমাত্র অটোমেটিক টপ-আপ ওয়েবসাইট। আমাদের ওয়েবসাইট থেকে আপনারা আমার তো ৩০ সেকেন্ড টপ আপ করতে পারবেন।
+    </p>
+    <p class="mb-2">Phone: 01628134404</p>
+    <p class="mb-8">mail.frtopup@gmail.com</p>
+  </div>
+  <div class="text-center">
+    <h3 class="text-xl font-bold mb-4">SUPPORT</h3>
+    <div class="mb-4">
+      <div class="flex items-center justify-center space-x-4 p-4 border border-[color:var(--border)] rounded-lg" id="phoneBtn">
+        <img aria-hidden="true" alt="phone-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📞" />
+        <div>
+          <p>9AM - 12PM</p>
+          <p>01628134404</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="flex items-center justify-center space-x-4 p-4 border border-[color:var(--border)] rounded-lg" id="whatsappBtn">
+        <img aria-hidden="true" alt="whatsapp-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📱" />
+        <div>
+          <p>9AM - 12PM</p>
+          <p>01628134404</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center mt-8">
+    <p class="text-sm">© Copyright 2022. All Rights Reserved. Developed by <span class="font-bold">frtopup</span></p>
+  </div>
+</div>
 
+<script>
+  const phoneBtn = document.getElementById('phoneBtn');
+  const whatsappBtn = document.getElementById('whatsappBtn');
 
+  phoneBtn.addEventListener('click', () => {
+    window.location.href = 'tel:01628134404';
+  });
+
+  whatsappBtn.addEventListener('click', () => {
+    window.location.href = 'https://wa.me/01628134404';
+  });
+</script>
+	  
   </body>
 </html>
