--- a/index.html
+++ b/index.html
@@ -270,49 +270,15 @@
 			}
 		</style>
   </head>
-  <body>
-    <div class="bg-[color:var(--background)] text-[color:var(--foreground)] p-8">
+  
+<div class="bg-[color:var(--background)] text-[color:var(--foreground)] p-8">
   <div class="text-center">
     <h2 class="text-2xl font-bold mb-4">STAY CONNECTED</h2>
     <p class="mb-4">
       আমরা বাংলাদেশের একমাত্র অটোমেটিক টপ-আপ ওয়েবসাইট। আমাদের ওয়েবসাইট থেকে আপনারা আমার তো 5 মিনিটে টপ আপ করতে পারবেন।
     </p>
     <p class="mb-2">Phone: 01629744516</p>
-    <p class="mb-8">mail.frtopup@gmail.com</p>
-  </div>
-  <div class="text-center">
-    <h3 class="text-xl font-bold mb-4">SUPPORT</h3>
-    <div class="mb-4">
-      <div class="flex items-center justify-center space-x-4 p-4 border border-[color:var(--border)] rounded-lg">
-        <img aria-hidden="true" alt="phone-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📞" />
-        <div>
-          <p>9AM - 12PM</p>
-          <p>01628134404</p>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="flex items-center justify-center space-x-4 p-4 border border-[color:var(--border)] rounded-lg">
-        <img aria-hidden="true" alt="whatsapp-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📱" />
-        <div>
-          <p>9AM - 12PM</p>
-          <p>01628134404</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="text-center mt-8">
-    <p class="text-sm">© Copyright 2022. All Rights Reserved. Developed by <span class="font-bold">frtopup</span></p>
-  </div>
-</div>
-<div class="bg-[color:var(--background)] text-[color:var(--foreground)] p-8">
-  <div class="text-center">
-    <h2 class="text-2xl font-bold mb-4">STAY CONNECTED</h2>
-    <p class="mb-4">
-      আমরা বাংলাদেশের একমাত্র অটোমেটিক টপ-আপ ওয়েবসাইট। আমাদের ওয়েবসাইট থেকে আপনারা আমার তো ৩০ সেকেন্ড টপ আপ করতে পারবেন।
-    </p>
-    <p class="mb-2">Phone: 01628134404</p>
-    <p class="mb-8">mail.frtopup@gmail.com</p>
+    <p class="mb-8">sirajul4516@gmail.com</p>
   </div>
   <div class="text-center">
     <h3 class="text-xl font-bold mb-4">SUPPORT</h3>
@@ -321,7 +287,7 @@
         <img aria-hidden="true" alt="phone-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📞" />
         <div>
           <p>9AM - 12PM</p>
-          <p>01628134404</p>
+          <p>01629744516</p>
         </div>
       </div>
     </div>
@@ -330,13 +296,13 @@
         <img aria-hidden="true" alt="whatsapp-icon" src="https://openui.fly.dev/openui/24x24.svg?text=📱" />
         <div>
           <p>9AM - 12PM</p>
-          <p>01628134404</p>
+          <p>01629744516</p>
         </div>
       </div>
     </div>
   </div>
   <div class="text-center mt-8">
-    <p class="text-sm">© Copyright 2022. All Rights Reserved. Developed by <span class="font-bold">frtopup</span></p>
+    <p class="text-sm">© Copyright 2022. All Rights Reserved. Developed by <span class="font-bold">MD Sirajul islam</span></p>
   </div>
 </div>
 
@@ -345,11 +311,11 @@
   const whatsappBtn = document.getElementById('whatsappBtn');
 
   phoneBtn.addEventListener('click', () => {
-    window.location.href = 'tel:01628134404';
+    window.location.href = 'tel:01629744516';
   });
 
   whatsappBtn.addEventListener('click', () => {
-    window.location.href = 'https://wa.me/01628134404';
+    window.location.href = 'https://wa.me/01629744516';
   });
 </script>
 	  
